# clock

./: CMakeLists.txt  README.md
include/: arrow.hpp  builder.hpp  settings.hpp  text.hpp  window.hpp
lib/: winbgim.hpp
src/: main.cpp
